// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResultContainer card to table transition 1`] = `
<div
  className="search-result-container"
>
  <React.Fragment>
    <PrintCartModal
      StatusMessage=""
      associatedItemsInPrintCart={
        Object {
          "3206": Array [
            Array [
              Object {
                "bankKey": 187,
                "brailleOnlyItem": false,
                "calculator": false,
                "claimCode": "ELA1",
                "claimLabel": "1.Reading",
                "commonCoreStandardId": "3.R.2a",
                "grade": 1,
                "gradeLabel": "Grade 3",
                "interactionTypeCode": "MC",
                "interactionTypeLabel": "Multiple Choice",
                "isPerformanceItem": true,
                "itemKey": 3163,
                "stimulusKey": 58679,
                "subjectCode": "ELA",
                "subjectLabel": "ELA/literacy",
                "targetDescription": "Target B description",
                "targetHash": 1039,
                "targetId": "B",
                "targetShortName": "Key Details",
                "testName": "Test-Name-1",
                "testNameInPrintCart": "Test-Name-1",
                "testOrder": 2,
                "testOrderInPrintCart": 2,
                "title": "ELA/ literacy Grade 3 Claim 1",
              },
            ],
            Array [
              Object {
                "bankKey": 187,
                "brailleOnlyItem": false,
                "calculator": true,
                "claimCode": "MATH1",
                "claimLabel": "1.Concepts and Procedures and Logical",
                "commonCoreStandardId": "6.M.1a",
                "grade": 8,
                "gradeLabel": "Grade 6",
                "interactionTypeCode": "EQ",
                "interactionTypeLabel": "Equation Multiple Choice choice",
                "isPerformanceItem": true,
                "itemKey": 3206,
                "selected": true,
                "selectionIndex": 0,
                "stimulusKey": 56900,
                "subjectCode": "MATH",
                "subjectLabel": "Math",
                "targetDescription": "Target A description with extra text for testing",
                "targetHash": 100,
                "targetId": "A",
                "targetShortName": "",
                "testName": "Test-Name-1",
                "testNameInPrintCart": "Test-Name-1",
                "testOrder": 1,
                "testOrderInPrintCart": 1,
                "title": "Math Grade 6 Claim 1",
              },
            ],
            Array [
              Object {
                "bankKey": 187,
                "brailleOnlyItem": false,
                "claimCode": "MATH4",
                "claimLabel": "3.Modeling/Data Analysis",
                "commonCoreStandardId": "6.M.2b",
                "grade": 8,
                "gradeLabel": "Grade 6",
                "interactionTypeCode": "MS",
                "interactionTypeLabel": "Multi Select",
                "isPerformanceItem": true,
                "itemKey": 3615,
                "stimulusKey": 23461,
                "subjectCode": "MATH",
                "subjectLabel": "Math",
                "targetDescription": "target C description",
                "targetHash": 0,
                "targetId": "C",
                "targetShortName": "",
                "testName": "Test-Name-1",
                "testNameInPrintCart": "Test-Name-1",
                "testOrder": 3,
                "testOrderInPrintCart": 3,
                "title": "Math Grade 6 Claim 4",
              },
            ],
          ],
        }
      }
      handleUpdateItemsinPrintCart={[Function]}
      isInterimSite={true}
      isSelectedItemsHaveMathItem={true}
      itemsInCart={
        Array [
          Object {
            "bankKey": 187,
            "brailleOnlyItem": false,
            "calculator": true,
            "claimCode": "MATH1",
            "claimLabel": "1.Concepts and Procedures and Logical",
            "commonCoreStandardId": "6.M.1a",
            "grade": 8,
            "gradeLabel": "Grade 6",
            "interactionTypeCode": "EQ",
            "interactionTypeLabel": "Equation Multiple Choice choice",
            "isPerformanceItem": true,
            "itemKey": 3206,
            "selected": true,
            "selectionIndex": 0,
            "stimulusKey": 56900,
            "subjectCode": "MATH",
            "subjectLabel": "Math",
            "targetDescription": "Target A description with extra text for testing",
            "targetHash": 100,
            "targetId": "A",
            "targetShortName": "",
            "testName": "Test-Name-1",
            "testNameInPrintCart": "Test-Name-1",
            "testOrder": 1,
            "testOrderInPrintCart": 1,
            "title": "Math Grade 6 Claim 1",
          },
          Object {
            "bankKey": 187,
            "brailleOnlyItem": false,
            "claimCode": "ELA4",
            "claimLabel": "4.Research/Inquiry",
            "commonCoreStandardId": "4.E.4a",
            "grade": 2,
            "gradeLabel": "Grade 4",
            "interactionTypeCode": "MS",
            "interactionTypeLabel": "Multi Select",
            "isPerformanceItem": false,
            "itemKey": 2928,
            "selected": true,
            "selectionIndex": 1,
            "stimulusKey": 87679,
            "subjectCode": "ELA",
            "subjectLabel": "ELA/literacy",
            "targetDescription": "target D description",
            "targetHash": 2832,
            "targetId": "D",
            "targetShortName": "Evaluate Information/ sources",
            "testName": "Test-Name-123",
            "testNameInPrintCart": "Test-Name-123",
            "testOrder": 2,
            "testOrderInPrintCart": 2,
            "title": "ELA/ literacy Grade 4 Claim 4",
          },
        ]
      }
      onAddOrRemoveSelectedItems={[Function]}
      onChangeModelState={[Function]}
      onItemsReorder={[Function]}
      onSubmitPrint={[Function]}
      showModal={false}
      totalSelectedItemsCount={4}
    />
    <ErrorMessageModal
      StatusMessage=""
      onChangeErrorModelState={[Function]}
      showModal={false}
    />
  </React.Fragment>
  <div
    className="row search-result-header-row"
  >
    <div
      className="col-sm-4 header-grid-div header-print-button-groups"
    >
      <button
        aria-label="Select All"
        className="btn btn-default search-result-container-header-button disabled "
        onClick={[Function]}
        title="Select All"
      >
        <i
          aria-hidden="true"
          className="fa fa-check"
        />
         Select All
      </button>
    </div>
    <div
      className="col-sm-3 header-grid-div  "
    >
      <button
        aria-label="table view toggle"
        className="btn btn-white"
        onClick={[Function]}
        value={0}
      >
        <i
          aria-hidden="true"
          className="fa fa-table"
        />
      </button>
      <button
        aria-label="item card view toggle"
        className="btn btn-gray"
        onClick={[Function]}
        value={1}
      >
        <i
          aria-hidden="true"
          className="glyphicon glyphicon-th-large glyphicon-pad"
        />
      </button>
    </div>
    <div
      className="col-sm-5 header-grid-div header-print-button-groups"
    >
      <button
        aria-label="Clear Selection"
        className="btn btn-default search-result-container-header-button"
        onClick={[Function]}
        title="Clear Selection"
      >
        <i
          aria-hidden="true"
          className="fa fa-eraser"
        />
         Clear
      </button>
      <PrintCartButton
        itemsInCart={4}
        label="Print Cart"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="search-result-body"
  >
    <ItemCard
      associatedItems={
        Object {
          "3206": Array [
            Array [
              Object {
                "bankKey": 187,
                "brailleOnlyItem": false,
                "calculator": false,
                "claimCode": "ELA1",
                "claimLabel": "1.Reading",
                "commonCoreStandardId": "3.R.2a",
                "grade": 1,
                "gradeLabel": "Grade 3",
                "interactionTypeCode": "MC",
                "interactionTypeLabel": "Multiple Choice",
                "isPerformanceItem": true,
                "itemKey": 3163,
                "stimulusKey": 58679,
                "subjectCode": "ELA",
                "subjectLabel": "ELA/literacy",
                "targetDescription": "Target B description",
                "targetHash": 1039,
                "targetId": "B",
                "targetShortName": "Key Details",
                "testName": "Test-Name-1",
                "testNameInPrintCart": "Test-Name-1",
                "testOrder": 2,
                "testOrderInPrintCart": 2,
                "title": "ELA/ literacy Grade 3 Claim 1",
              },
            ],
            Array [
              Object {
                "bankKey": 187,
                "brailleOnlyItem": false,
                "calculator": true,
                "claimCode": "MATH1",
                "claimLabel": "1.Concepts and Procedures and Logical",
                "commonCoreStandardId": "6.M.1a",
                "grade": 8,
                "gradeLabel": "Grade 6",
                "interactionTypeCode": "EQ",
                "interactionTypeLabel": "Equation Multiple Choice choice",
                "isPerformanceItem": true,
                "itemKey": 3206,
                "selected": true,
                "selectionIndex": 0,
                "stimulusKey": 56900,
                "subjectCode": "MATH",
                "subjectLabel": "Math",
                "targetDescription": "Target A description with extra text for testing",
                "targetHash": 100,
                "targetId": "A",
                "targetShortName": "",
                "testName": "Test-Name-1",
                "testNameInPrintCart": "Test-Name-1",
                "testOrder": 1,
                "testOrderInPrintCart": 1,
                "title": "Math Grade 6 Claim 1",
              },
            ],
            Array [
              Object {
                "bankKey": 187,
                "brailleOnlyItem": false,
                "claimCode": "MATH4",
                "claimLabel": "3.Modeling/Data Analysis",
                "commonCoreStandardId": "6.M.2b",
                "grade": 8,
                "gradeLabel": "Grade 6",
                "interactionTypeCode": "MS",
                "interactionTypeLabel": "Multi Select",
                "isPerformanceItem": true,
                "itemKey": 3615,
                "stimulusKey": 23461,
                "subjectCode": "MATH",
                "subjectLabel": "Math",
                "targetDescription": "target C description",
                "targetHash": 0,
                "targetId": "C",
                "targetShortName": "",
                "testName": "Test-Name-1",
                "testNameInPrintCart": "Test-Name-1",
                "testOrder": 3,
                "testOrderInPrintCart": 3,
                "title": "Math Grade 6 Claim 4",
              },
            ],
          ],
        }
      }
      countNumberOfItemsAfterSelection={[Function]}
      getSelectedItemCount={[Function]}
      isInterimSite={true}
      isPrintLimitEnabled={true}
      key="187 - 3206"
      onRowSelect={[Function]}
      rowData={
        Object {
          "bankKey": 187,
          "brailleOnlyItem": false,
          "calculator": true,
          "claimCode": "MATH1",
          "claimLabel": "1.Concepts and Procedures and Logical",
          "commonCoreStandardId": "6.M.1a",
          "grade": 8,
          "gradeLabel": "Grade 6",
          "interactionTypeCode": "EQ",
          "interactionTypeLabel": "Equation Multiple Choice choice",
          "isPerformanceItem": true,
          "itemKey": 3206,
          "selected": true,
          "selectionIndex": 0,
          "stimulusKey": 56900,
          "subjectCode": "MATH",
          "subjectLabel": "Math",
          "targetDescription": "Target A description with extra text for testing",
          "targetHash": 100,
          "targetId": "A",
          "targetShortName": "",
          "testName": "Test-Name-1",
          "testNameInPrintCart": "Test-Name-1",
          "testOrder": 1,
          "testOrderInPrintCart": 1,
          "title": "Math Grade 6 Claim 1",
        }
      }
      showErrorModalOnPrintItemsCountExceeded={[Function]}
    />
    <ItemCard
      associatedItems={
        Object {
          "3206": Array [
            Array [
              Object {
                "bankKey": 187,
                "brailleOnlyItem": false,
                "calculator": false,
                "claimCode": "ELA1",
                "claimLabel": "1.Reading",
                "commonCoreStandardId": "3.R.2a",
                "grade": 1,
                "gradeLabel": "Grade 3",
                "interactionTypeCode": "MC",
                "interactionTypeLabel": "Multiple Choice",
                "isPerformanceItem": true,
                "itemKey": 3163,
                "stimulusKey": 58679,
                "subjectCode": "ELA",
                "subjectLabel": "ELA/literacy",
                "targetDescription": "Target B description",
                "targetHash": 1039,
                "targetId": "B",
                "targetShortName": "Key Details",
                "testName": "Test-Name-1",
                "testNameInPrintCart": "Test-Name-1",
                "testOrder": 2,
                "testOrderInPrintCart": 2,
                "title": "ELA/ literacy Grade 3 Claim 1",
              },
            ],
            Array [
              Object {
                "bankKey": 187,
                "brailleOnlyItem": false,
                "calculator": true,
                "claimCode": "MATH1",
                "claimLabel": "1.Concepts and Procedures and Logical",
                "commonCoreStandardId": "6.M.1a",
                "grade": 8,
                "gradeLabel": "Grade 6",
                "interactionTypeCode": "EQ",
                "interactionTypeLabel": "Equation Multiple Choice choice",
                "isPerformanceItem": true,
                "itemKey": 3206,
                "selected": true,
                "selectionIndex": 0,
                "stimulusKey": 56900,
                "subjectCode": "MATH",
                "subjectLabel": "Math",
                "targetDescription": "Target A description with extra text for testing",
                "targetHash": 100,
                "targetId": "A",
                "targetShortName": "",
                "testName": "Test-Name-1",
                "testNameInPrintCart": "Test-Name-1",
                "testOrder": 1,
                "testOrderInPrintCart": 1,
                "title": "Math Grade 6 Claim 1",
              },
            ],
            Array [
              Object {
                "bankKey": 187,
                "brailleOnlyItem": false,
                "claimCode": "MATH4",
                "claimLabel": "3.Modeling/Data Analysis",
                "commonCoreStandardId": "6.M.2b",
                "grade": 8,
                "gradeLabel": "Grade 6",
                "interactionTypeCode": "MS",
                "interactionTypeLabel": "Multi Select",
                "isPerformanceItem": true,
                "itemKey": 3615,
                "stimulusKey": 23461,
                "subjectCode": "MATH",
                "subjectLabel": "Math",
                "targetDescription": "target C description",
                "targetHash": 0,
                "targetId": "C",
                "targetShortName": "",
                "testName": "Test-Name-1",
                "testNameInPrintCart": "Test-Name-1",
                "testOrder": 3,
                "testOrderInPrintCart": 3,
                "title": "Math Grade 6 Claim 4",
              },
            ],
          ],
        }
      }
      countNumberOfItemsAfterSelection={[Function]}
      getSelectedItemCount={[Function]}
      isInterimSite={true}
      isPrintLimitEnabled={true}
      key="187 - 3163"
      onRowSelect={[Function]}
      rowData={
        Object {
          "bankKey": 187,
          "brailleOnlyItem": false,
          "calculator": false,
          "claimCode": "ELA1",
          "claimLabel": "1.Reading",
          "commonCoreStandardId": "3.R.2a",
          "grade": 1,
          "gradeLabel": "Grade 3",
          "interactionTypeCode": "MC",
          "interactionTypeLabel": "Multiple Choice",
          "isPerformanceItem": true,
          "itemKey": 3163,
          "stimulusKey": 58679,
          "subjectCode": "ELA",
          "subjectLabel": "ELA/literacy",
          "targetDescription": "Target B description",
          "targetHash": 1039,
          "targetId": "B",
          "targetShortName": "Key Details",
          "testName": "Test-Name-1",
          "testNameInPrintCart": "Test-Name-1",
          "testOrder": 2,
          "testOrderInPrintCart": 2,
          "title": "ELA/ literacy Grade 3 Claim 1",
        }
      }
      showErrorModalOnPrintItemsCountExceeded={[Function]}
    />
    <ItemCard
      associatedItems={
        Object {
          "3206": Array [
            Array [
              Object {
                "bankKey": 187,
                "brailleOnlyItem": false,
                "calculator": false,
                "claimCode": "ELA1",
                "claimLabel": "1.Reading",
                "commonCoreStandardId": "3.R.2a",
                "grade": 1,
                "gradeLabel": "Grade 3",
                "interactionTypeCode": "MC",
                "interactionTypeLabel": "Multiple Choice",
                "isPerformanceItem": true,
                "itemKey": 3163,
                "stimulusKey": 58679,
                "subjectCode": "ELA",
                "subjectLabel": "ELA/literacy",
                "targetDescription": "Target B description",
                "targetHash": 1039,
                "targetId": "B",
                "targetShortName": "Key Details",
                "testName": "Test-Name-1",
                "testNameInPrintCart": "Test-Name-1",
                "testOrder": 2,
                "testOrderInPrintCart": 2,
                "title": "ELA/ literacy Grade 3 Claim 1",
              },
            ],
            Array [
              Object {
                "bankKey": 187,
                "brailleOnlyItem": false,
                "calculator": true,
                "claimCode": "MATH1",
                "claimLabel": "1.Concepts and Procedures and Logical",
                "commonCoreStandardId": "6.M.1a",
                "grade": 8,
                "gradeLabel": "Grade 6",
                "interactionTypeCode": "EQ",
                "interactionTypeLabel": "Equation Multiple Choice choice",
                "isPerformanceItem": true,
                "itemKey": 3206,
                "selected": true,
                "selectionIndex": 0,
                "stimulusKey": 56900,
                "subjectCode": "MATH",
                "subjectLabel": "Math",
                "targetDescription": "Target A description with extra text for testing",
                "targetHash": 100,
                "targetId": "A",
                "targetShortName": "",
                "testName": "Test-Name-1",
                "testNameInPrintCart": "Test-Name-1",
                "testOrder": 1,
                "testOrderInPrintCart": 1,
                "title": "Math Grade 6 Claim 1",
              },
            ],
            Array [
              Object {
                "bankKey": 187,
                "brailleOnlyItem": false,
                "claimCode": "MATH4",
                "claimLabel": "3.Modeling/Data Analysis",
                "commonCoreStandardId": "6.M.2b",
                "grade": 8,
                "gradeLabel": "Grade 6",
                "interactionTypeCode": "MS",
                "interactionTypeLabel": "Multi Select",
                "isPerformanceItem": true,
                "itemKey": 3615,
                "stimulusKey": 23461,
                "subjectCode": "MATH",
                "subjectLabel": "Math",
                "targetDescription": "target C description",
                "targetHash": 0,
                "targetId": "C",
                "targetShortName": "",
                "testName": "Test-Name-1",
                "testNameInPrintCart": "Test-Name-1",
                "testOrder": 3,
                "testOrderInPrintCart": 3,
                "title": "Math Grade 6 Claim 4",
              },
            ],
          ],
        }
      }
      countNumberOfItemsAfterSelection={[Function]}
      getSelectedItemCount={[Function]}
      isInterimSite={true}
      isPrintLimitEnabled={true}
      key="187 - 3615"
      onRowSelect={[Function]}
      rowData={
        Object {
          "bankKey": 187,
          "brailleOnlyItem": false,
          "claimCode": "MATH4",
          "claimLabel": "3.Modeling/Data Analysis",
          "commonCoreStandardId": "6.M.2b",
          "grade": 8,
          "gradeLabel": "Grade 6",
          "interactionTypeCode": "MS",
          "interactionTypeLabel": "Multi Select",
          "isPerformanceItem": true,
          "itemKey": 3615,
          "stimulusKey": 23461,
          "subjectCode": "MATH",
          "subjectLabel": "Math",
          "targetDescription": "target C description",
          "targetHash": 0,
          "targetId": "C",
          "targetShortName": "",
          "testName": "Test-Name-1",
          "testNameInPrintCart": "Test-Name-1",
          "testOrder": 3,
          "testOrderInPrintCart": 3,
          "title": "Math Grade 6 Claim 4",
        }
      }
      showErrorModalOnPrintItemsCountExceeded={[Function]}
    />
    <ItemCard
      associatedItems={
        Object {
          "3206": Array [
            Array [
              Object {
                "bankKey": 187,
                "brailleOnlyItem": false,
                "calculator": false,
                "claimCode": "ELA1",
                "claimLabel": "1.Reading",
                "commonCoreStandardId": "3.R.2a",
                "grade": 1,
                "gradeLabel": "Grade 3",
                "interactionTypeCode": "MC",
                "interactionTypeLabel": "Multiple Choice",
                "isPerformanceItem": true,
                "itemKey": 3163,
                "stimulusKey": 58679,
                "subjectCode": "ELA",
                "subjectLabel": "ELA/literacy",
                "targetDescription": "Target B description",
                "targetHash": 1039,
                "targetId": "B",
                "targetShortName": "Key Details",
                "testName": "Test-Name-1",
                "testNameInPrintCart": "Test-Name-1",
                "testOrder": 2,
                "testOrderInPrintCart": 2,
                "title": "ELA/ literacy Grade 3 Claim 1",
              },
            ],
            Array [
              Object {
                "bankKey": 187,
                "brailleOnlyItem": false,
                "calculator": true,
                "claimCode": "MATH1",
                "claimLabel": "1.Concepts and Procedures and Logical",
                "commonCoreStandardId": "6.M.1a",
                "grade": 8,
                "gradeLabel": "Grade 6",
                "interactionTypeCode": "EQ",
                "interactionTypeLabel": "Equation Multiple Choice choice",
                "isPerformanceItem": true,
                "itemKey": 3206,
                "selected": true,
                "selectionIndex": 0,
                "stimulusKey": 56900,
                "subjectCode": "MATH",
                "subjectLabel": "Math",
                "targetDescription": "Target A description with extra text for testing",
                "targetHash": 100,
                "targetId": "A",
                "targetShortName": "",
                "testName": "Test-Name-1",
                "testNameInPrintCart": "Test-Name-1",
                "testOrder": 1,
                "testOrderInPrintCart": 1,
                "title": "Math Grade 6 Claim 1",
              },
            ],
            Array [
              Object {
                "bankKey": 187,
                "brailleOnlyItem": false,
                "claimCode": "MATH4",
                "claimLabel": "3.Modeling/Data Analysis",
                "commonCoreStandardId": "6.M.2b",
                "grade": 8,
                "gradeLabel": "Grade 6",
                "interactionTypeCode": "MS",
                "interactionTypeLabel": "Multi Select",
                "isPerformanceItem": true,
                "itemKey": 3615,
                "stimulusKey": 23461,
                "subjectCode": "MATH",
                "subjectLabel": "Math",
                "targetDescription": "target C description",
                "targetHash": 0,
                "targetId": "C",
                "targetShortName": "",
                "testName": "Test-Name-1",
                "testNameInPrintCart": "Test-Name-1",
                "testOrder": 3,
                "testOrderInPrintCart": 3,
                "title": "Math Grade 6 Claim 4",
              },
            ],
          ],
        }
      }
      countNumberOfItemsAfterSelection={[Function]}
      getSelectedItemCount={[Function]}
      isInterimSite={true}
      isPrintLimitEnabled={true}
      key="187 - 2928"
      onRowSelect={[Function]}
      rowData={
        Object {
          "bankKey": 187,
          "brailleOnlyItem": false,
          "claimCode": "ELA4",
          "claimLabel": "4.Research/Inquiry",
          "commonCoreStandardId": "4.E.4a",
          "grade": 2,
          "gradeLabel": "Grade 4",
          "interactionTypeCode": "MS",
          "interactionTypeLabel": "Multi Select",
          "isPerformanceItem": false,
          "itemKey": 2928,
          "selected": true,
          "selectionIndex": 1,
          "stimulusKey": 87679,
          "subjectCode": "ELA",
          "subjectLabel": "ELA/literacy",
          "targetDescription": "target D description",
          "targetHash": 2832,
          "targetId": "D",
          "targetShortName": "Evaluate Information/ sources",
          "testName": "Test-Name-123",
          "testNameInPrintCart": "Test-Name-123",
          "testOrder": 2,
          "testOrderInPrintCart": 2,
          "title": "ELA/ literacy Grade 4 Claim 4",
        }
      }
      showErrorModalOnPrintItemsCountExceeded={[Function]}
    />
  </div>
</div>
`;

exports[`SearchResultContainer empty itemCards 1`] = `
<div
  className="search-result-container"
>
  <React.Fragment>
    <PrintCartModal
      StatusMessage=""
      associatedItemsInPrintCart={Object {}}
      handleUpdateItemsinPrintCart={[Function]}
      isInterimSite={true}
      isSelectedItemsHaveMathItem={false}
      itemsInCart={Array []}
      onAddOrRemoveSelectedItems={[Function]}
      onChangeModelState={[Function]}
      onItemsReorder={[Function]}
      onSubmitPrint={[Function]}
      showModal={false}
      totalSelectedItemsCount={0}
    />
    <ErrorMessageModal
      StatusMessage=""
      onChangeErrorModelState={[Function]}
      showModal={false}
    />
  </React.Fragment>
  <div
    className="row search-result-header-row"
  >
    <div
      className="col-sm-4 header-grid-div header-print-button-groups"
    >
      <button
        aria-label="Select All"
        className="btn btn-default search-result-container-header-button disabled "
        onClick={[Function]}
        title="Select All"
      >
        <i
          aria-hidden="true"
          className="fa fa-check"
        />
         Select All
      </button>
    </div>
    <div
      className="col-sm-3 header-grid-div  "
    >
      <button
        aria-label="table view toggle"
        className="btn btn-white"
        onClick={[Function]}
        value={0}
      >
        <i
          aria-hidden="true"
          className="fa fa-table"
        />
      </button>
      <button
        aria-label="item card view toggle"
        className="btn btn-gray"
        onClick={[Function]}
        value={1}
      >
        <i
          aria-hidden="true"
          className="glyphicon glyphicon-th-large glyphicon-pad"
        />
      </button>
    </div>
    <div
      className="col-sm-5 header-grid-div header-print-button-groups"
    >
      <button
        aria-label="Clear Selection"
        className="btn btn-default search-result-container-header-button disabled"
        onClick={[Function]}
        title="Clear Selection"
      >
        <i
          aria-hidden="true"
          className="fa fa-eraser"
        />
         Clear
      </button>
      <PrintCartButton
        itemsInCart={0}
        label="Print Cart"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="search-result-body"
  >
    <div
      className="loader"
    />
  </div>
</div>
`;

exports[`SearchResultContainer onload matches snapshot ItemCards 1`] = `
<div
  className="search-result-container"
>
  <React.Fragment>
    <PrintCartModal
      StatusMessage=""
      associatedItemsInPrintCart={Object {}}
      handleUpdateItemsinPrintCart={[Function]}
      isInterimSite={true}
      isSelectedItemsHaveMathItem={false}
      itemsInCart={Array []}
      onAddOrRemoveSelectedItems={[Function]}
      onChangeModelState={[Function]}
      onItemsReorder={[Function]}
      onSubmitPrint={[Function]}
      showModal={false}
      totalSelectedItemsCount={0}
    />
    <ErrorMessageModal
      StatusMessage=""
      onChangeErrorModelState={[Function]}
      showModal={false}
    />
  </React.Fragment>
  <div
    className="row search-result-header-row"
  >
    <div
      className="col-sm-4 header-grid-div header-print-button-groups"
    >
      <button
        aria-label="Select All"
        className="btn btn-default search-result-container-header-button  "
        onClick={[Function]}
        title="Select All"
      >
        <i
          aria-hidden="true"
          className="fa fa-check"
        />
         Select All
      </button>
    </div>
    <div
      className="col-sm-3 header-grid-div  "
    >
      <button
        aria-label="table view toggle"
        className="btn btn-white"
        onClick={[Function]}
        value={0}
      >
        <i
          aria-hidden="true"
          className="fa fa-table"
        />
      </button>
      <button
        aria-label="item card view toggle"
        className="btn btn-gray"
        onClick={[Function]}
        value={1}
      >
        <i
          aria-hidden="true"
          className="glyphicon glyphicon-th-large glyphicon-pad"
        />
      </button>
    </div>
    <div
      className="col-sm-5 header-grid-div header-print-button-groups"
    >
      <button
        aria-label="Clear Selection"
        className="btn btn-default search-result-container-header-button disabled"
        onClick={[Function]}
        title="Clear Selection"
      >
        <i
          aria-hidden="true"
          className="fa fa-eraser"
        />
         Clear
      </button>
      <PrintCartButton
        itemsInCart={0}
        label="Print Cart"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="search-result-body"
  >
    <ItemCard
      associatedItems={Object {}}
      countNumberOfItemsAfterSelection={[Function]}
      getSelectedItemCount={[Function]}
      isInterimSite={true}
      isPrintLimitEnabled={true}
      key="187 - 3206"
      onRowSelect={[Function]}
      rowData={
        Object {
          "bankKey": 187,
          "brailleOnlyItem": false,
          "calculator": true,
          "claimCode": "MATH1",
          "claimLabel": "1.Concepts and Procedures and Logical",
          "commonCoreStandardId": "6.M.1a",
          "grade": 8,
          "gradeLabel": "Grade 6",
          "interactionTypeCode": "EQ",
          "interactionTypeLabel": "Equation Multiple Choice choice",
          "isPerformanceItem": true,
          "itemKey": 3206,
          "stimulusKey": 56900,
          "subjectCode": "MATH",
          "subjectLabel": "Math",
          "targetDescription": "Target A description with extra text for testing",
          "targetHash": 100,
          "targetId": "A",
          "targetShortName": "",
          "testName": "Test-Name-1",
          "testOrder": 1,
          "title": "Math Grade 6 Claim 1",
        }
      }
      showErrorModalOnPrintItemsCountExceeded={[Function]}
    />
    <ItemCard
      associatedItems={Object {}}
      countNumberOfItemsAfterSelection={[Function]}
      getSelectedItemCount={[Function]}
      isInterimSite={true}
      isPrintLimitEnabled={true}
      key="187 - 3163"
      onRowSelect={[Function]}
      rowData={
        Object {
          "bankKey": 187,
          "brailleOnlyItem": false,
          "calculator": false,
          "claimCode": "ELA1",
          "claimLabel": "1.Reading",
          "commonCoreStandardId": "3.R.2a",
          "grade": 1,
          "gradeLabel": "Grade 3",
          "interactionTypeCode": "MC",
          "interactionTypeLabel": "Multiple Choice",
          "isPerformanceItem": true,
          "itemKey": 3163,
          "stimulusKey": 58679,
          "subjectCode": "ELA",
          "subjectLabel": "ELA/literacy",
          "targetDescription": "Target B description",
          "targetHash": 1039,
          "targetId": "B",
          "targetShortName": "Key Details",
          "testName": "Test-Name-1",
          "testOrder": 2,
          "title": "ELA/ literacy Grade 3 Claim 1",
        }
      }
      showErrorModalOnPrintItemsCountExceeded={[Function]}
    />
    <ItemCard
      associatedItems={Object {}}
      countNumberOfItemsAfterSelection={[Function]}
      getSelectedItemCount={[Function]}
      isInterimSite={true}
      isPrintLimitEnabled={true}
      key="187 - 3615"
      onRowSelect={[Function]}
      rowData={
        Object {
          "bankKey": 187,
          "brailleOnlyItem": false,
          "claimCode": "MATH4",
          "claimLabel": "3.Modeling/Data Analysis",
          "commonCoreStandardId": "6.M.2b",
          "grade": 8,
          "gradeLabel": "Grade 6",
          "interactionTypeCode": "MS",
          "interactionTypeLabel": "Multi Select",
          "isPerformanceItem": true,
          "itemKey": 3615,
          "stimulusKey": 23461,
          "subjectCode": "MATH",
          "subjectLabel": "Math",
          "targetDescription": "target C description",
          "targetHash": 0,
          "targetId": "C",
          "targetShortName": "",
          "testName": "Test-Name-1",
          "testOrder": 3,
          "title": "Math Grade 6 Claim 4",
        }
      }
      showErrorModalOnPrintItemsCountExceeded={[Function]}
    />
    <ItemCard
      associatedItems={Object {}}
      countNumberOfItemsAfterSelection={[Function]}
      getSelectedItemCount={[Function]}
      isInterimSite={true}
      isPrintLimitEnabled={true}
      key="187 - 2928"
      onRowSelect={[Function]}
      rowData={
        Object {
          "bankKey": 187,
          "brailleOnlyItem": false,
          "claimCode": "ELA4",
          "claimLabel": "4.Research/Inquiry",
          "commonCoreStandardId": "4.E.4a",
          "grade": 2,
          "gradeLabel": "Grade 4",
          "interactionTypeCode": "MS",
          "interactionTypeLabel": "Multi Select",
          "isPerformanceItem": false,
          "itemKey": 2928,
          "stimulusKey": 87679,
          "subjectCode": "ELA",
          "subjectLabel": "ELA/literacy",
          "targetDescription": "target D description",
          "targetHash": 2832,
          "targetId": "D",
          "targetShortName": "Evaluate Information/ sources",
          "testName": "Test-Name-123",
          "testOrder": 2,
          "title": "ELA/ literacy Grade 4 Claim 4",
        }
      }
      showErrorModalOnPrintItemsCountExceeded={[Function]}
    />
  </div>
</div>
`;

exports[`SearchResultContainer onload matches snapshot table 1`] = `
<div
  className="search-result-container"
>
  <React.Fragment>
    <PrintCartModal
      StatusMessage=""
      associatedItemsInPrintCart={Object {}}
      handleUpdateItemsinPrintCart={[Function]}
      isInterimSite={true}
      isSelectedItemsHaveMathItem={false}
      itemsInCart={Array []}
      onAddOrRemoveSelectedItems={[Function]}
      onChangeModelState={[Function]}
      onItemsReorder={[Function]}
      onSubmitPrint={[Function]}
      showModal={false}
      totalSelectedItemsCount={0}
    />
    <ErrorMessageModal
      StatusMessage=""
      onChangeErrorModelState={[Function]}
      showModal={false}
    />
  </React.Fragment>
  <div
    className="row search-result-header-row"
  >
    <div
      className="col-sm-4 header-grid-div header-print-button-groups"
    >
      <button
        aria-label="Select All"
        className="btn btn-default search-result-container-header-button  "
        onClick={[Function]}
        title="Select All"
      >
        <i
          aria-hidden="true"
          className="fa fa-check"
        />
         Select All
      </button>
    </div>
    <div
      className="col-sm-3 header-grid-div  "
    >
      <button
        aria-label="table view toggle"
        className="btn btn-gray"
        onClick={[Function]}
        value={0}
      >
        <i
          aria-hidden="true"
          className="fa fa-table"
        />
      </button>
      <button
        aria-label="item card view toggle"
        className="btn btn-white"
        onClick={[Function]}
        value={1}
      >
        <i
          aria-hidden="true"
          className="glyphicon glyphicon-th-large glyphicon-pad"
        />
      </button>
    </div>
    <div
      className="col-sm-5 header-grid-div header-print-button-groups"
    >
      <button
        aria-label="Clear Selection"
        className="btn btn-default search-result-container-header-button disabled"
        onClick={[Function]}
        title="Clear Selection"
      >
        <i
          aria-hidden="true"
          className="fa fa-eraser"
        />
         Clear
      </button>
      <PrintCartButton
        itemsInCart={0}
        label="Print Cart"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="search-result-body"
  >
    <ItemTableContainer
      associatedItems={Object {}}
      countNumberOfItemsAfterSelection={[Function]}
      getSelectedItemCount={[Function]}
      isInterimSite={true}
      isLinkTable={false}
      item={
        Object {
          "kind": "none",
        }
      }
      itemCards={
        Array [
          Object {
            "bankKey": 187,
            "brailleOnlyItem": false,
            "calculator": true,
            "claimCode": "MATH1",
            "claimLabel": "1.Concepts and Procedures and Logical",
            "commonCoreStandardId": "6.M.1a",
            "grade": 8,
            "gradeLabel": "Grade 6",
            "interactionTypeCode": "EQ",
            "interactionTypeLabel": "Equation Multiple Choice choice",
            "isPerformanceItem": true,
            "itemKey": 3206,
            "stimulusKey": 56900,
            "subjectCode": "MATH",
            "subjectLabel": "Math",
            "targetDescription": "Target A description with extra text for testing",
            "targetHash": 100,
            "targetId": "A",
            "targetShortName": "",
            "testName": "Test-Name-1",
            "testOrder": 1,
            "title": "Math Grade 6 Claim 1",
          },
          Object {
            "bankKey": 187,
            "brailleOnlyItem": false,
            "calculator": false,
            "claimCode": "ELA1",
            "claimLabel": "1.Reading",
            "commonCoreStandardId": "3.R.2a",
            "grade": 1,
            "gradeLabel": "Grade 3",
            "interactionTypeCode": "MC",
            "interactionTypeLabel": "Multiple Choice",
            "isPerformanceItem": true,
            "itemKey": 3163,
            "stimulusKey": 58679,
            "subjectCode": "ELA",
            "subjectLabel": "ELA/literacy",
            "targetDescription": "Target B description",
            "targetHash": 1039,
            "targetId": "B",
            "targetShortName": "Key Details",
            "testName": "Test-Name-1",
            "testOrder": 2,
            "title": "ELA/ literacy Grade 3 Claim 1",
          },
          Object {
            "bankKey": 187,
            "brailleOnlyItem": false,
            "claimCode": "MATH4",
            "claimLabel": "3.Modeling/Data Analysis",
            "commonCoreStandardId": "6.M.2b",
            "grade": 8,
            "gradeLabel": "Grade 6",
            "interactionTypeCode": "MS",
            "interactionTypeLabel": "Multi Select",
            "isPerformanceItem": true,
            "itemKey": 3615,
            "stimulusKey": 23461,
            "subjectCode": "MATH",
            "subjectLabel": "Math",
            "targetDescription": "target C description",
            "targetHash": 0,
            "targetId": "C",
            "targetShortName": "",
            "testName": "Test-Name-1",
            "testOrder": 3,
            "title": "Math Grade 6 Claim 4",
          },
          Object {
            "bankKey": 187,
            "brailleOnlyItem": false,
            "claimCode": "ELA4",
            "claimLabel": "4.Research/Inquiry",
            "commonCoreStandardId": "4.E.4a",
            "grade": 2,
            "gradeLabel": "Grade 4",
            "interactionTypeCode": "MS",
            "interactionTypeLabel": "Multi Select",
            "isPerformanceItem": false,
            "itemKey": 2928,
            "stimulusKey": 87679,
            "subjectCode": "ELA",
            "subjectLabel": "ELA/literacy",
            "targetDescription": "target D description",
            "targetHash": 2832,
            "targetId": "D",
            "targetShortName": "Evaluate Information/ sources",
            "testName": "Test-Name-123",
            "testOrder": 2,
            "title": "ELA/ literacy Grade 4 Claim 4",
          },
        ]
      }
      numberOfSelectedItem={0}
      onCountNumberOfItemSelection={[Function]}
      onItemSelection={[Function]}
      onRowSelection={[Function]}
      showErrorModalOnPrintItemsCountExceeded={[Function]}
    />
  </div>
</div>
`;

exports[`SearchResultContainer table to card transition 1`] = `
<div
  className="search-result-container"
>
  <React.Fragment>
    <PrintCartModal
      StatusMessage=""
      associatedItemsInPrintCart={Object {}}
      handleUpdateItemsinPrintCart={[Function]}
      isInterimSite={true}
      isSelectedItemsHaveMathItem={false}
      itemsInCart={Array []}
      onAddOrRemoveSelectedItems={[Function]}
      onChangeModelState={[Function]}
      onItemsReorder={[Function]}
      onSubmitPrint={[Function]}
      showModal={false}
      totalSelectedItemsCount={0}
    />
    <ErrorMessageModal
      StatusMessage=""
      onChangeErrorModelState={[Function]}
      showModal={false}
    />
  </React.Fragment>
  <div
    className="row search-result-header-row"
  >
    <div
      className="col-sm-4 header-grid-div header-print-button-groups"
    >
      <button
        aria-label="Select All"
        className="btn btn-default search-result-container-header-button  "
        onClick={[Function]}
        title="Select All"
      >
        <i
          aria-hidden="true"
          className="fa fa-check"
        />
         Select All
      </button>
    </div>
    <div
      className="col-sm-3 header-grid-div  "
    >
      <button
        aria-label="table view toggle"
        className="btn btn-gray"
        onClick={[Function]}
        value={0}
      >
        <i
          aria-hidden="true"
          className="fa fa-table"
        />
      </button>
      <button
        aria-label="item card view toggle"
        className="btn btn-white"
        onClick={[Function]}
        value={1}
      >
        <i
          aria-hidden="true"
          className="glyphicon glyphicon-th-large glyphicon-pad"
        />
      </button>
    </div>
    <div
      className="col-sm-5 header-grid-div header-print-button-groups"
    >
      <button
        aria-label="Clear Selection"
        className="btn btn-default search-result-container-header-button disabled"
        onClick={[Function]}
        title="Clear Selection"
      >
        <i
          aria-hidden="true"
          className="fa fa-eraser"
        />
         Clear
      </button>
      <PrintCartButton
        itemsInCart={0}
        label="Print Cart"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="search-result-body"
  >
    <ItemTableContainer
      associatedItems={Object {}}
      countNumberOfItemsAfterSelection={[Function]}
      getSelectedItemCount={[Function]}
      isInterimSite={true}
      isLinkTable={false}
      item={
        Object {
          "kind": "none",
        }
      }
      itemCards={
        Array [
          Object {
            "bankKey": 187,
            "brailleOnlyItem": false,
            "calculator": true,
            "claimCode": "MATH1",
            "claimLabel": "1.Concepts and Procedures and Logical",
            "commonCoreStandardId": "6.M.1a",
            "grade": 8,
            "gradeLabel": "Grade 6",
            "interactionTypeCode": "EQ",
            "interactionTypeLabel": "Equation Multiple Choice choice",
            "isPerformanceItem": true,
            "itemKey": 3206,
            "stimulusKey": 56900,
            "subjectCode": "MATH",
            "subjectLabel": "Math",
            "targetDescription": "Target A description with extra text for testing",
            "targetHash": 100,
            "targetId": "A",
            "targetShortName": "",
            "testName": "Test-Name-1",
            "testOrder": 1,
            "title": "Math Grade 6 Claim 1",
          },
          Object {
            "bankKey": 187,
            "brailleOnlyItem": false,
            "calculator": false,
            "claimCode": "ELA1",
            "claimLabel": "1.Reading",
            "commonCoreStandardId": "3.R.2a",
            "grade": 1,
            "gradeLabel": "Grade 3",
            "interactionTypeCode": "MC",
            "interactionTypeLabel": "Multiple Choice",
            "isPerformanceItem": true,
            "itemKey": 3163,
            "stimulusKey": 58679,
            "subjectCode": "ELA",
            "subjectLabel": "ELA/literacy",
            "targetDescription": "Target B description",
            "targetHash": 1039,
            "targetId": "B",
            "targetShortName": "Key Details",
            "testName": "Test-Name-1",
            "testOrder": 2,
            "title": "ELA/ literacy Grade 3 Claim 1",
          },
          Object {
            "bankKey": 187,
            "brailleOnlyItem": false,
            "claimCode": "MATH4",
            "claimLabel": "3.Modeling/Data Analysis",
            "commonCoreStandardId": "6.M.2b",
            "grade": 8,
            "gradeLabel": "Grade 6",
            "interactionTypeCode": "MS",
            "interactionTypeLabel": "Multi Select",
            "isPerformanceItem": true,
            "itemKey": 3615,
            "stimulusKey": 23461,
            "subjectCode": "MATH",
            "subjectLabel": "Math",
            "targetDescription": "target C description",
            "targetHash": 0,
            "targetId": "C",
            "targetShortName": "",
            "testName": "Test-Name-1",
            "testOrder": 3,
            "title": "Math Grade 6 Claim 4",
          },
          Object {
            "bankKey": 187,
            "brailleOnlyItem": false,
            "claimCode": "ELA4",
            "claimLabel": "4.Research/Inquiry",
            "commonCoreStandardId": "4.E.4a",
            "grade": 2,
            "gradeLabel": "Grade 4",
            "interactionTypeCode": "MS",
            "interactionTypeLabel": "Multi Select",
            "isPerformanceItem": false,
            "itemKey": 2928,
            "stimulusKey": 87679,
            "subjectCode": "ELA",
            "subjectLabel": "ELA/literacy",
            "targetDescription": "target D description",
            "targetHash": 2832,
            "targetId": "D",
            "targetShortName": "Evaluate Information/ sources",
            "testName": "Test-Name-123",
            "testOrder": 2,
            "title": "ELA/ literacy Grade 4 Claim 4",
          },
        ]
      }
      numberOfSelectedItem={0}
      onCountNumberOfItemSelection={[Function]}
      onItemSelection={[Function]}
      onRowSelection={[Function]}
      showErrorModalOnPrintItemsCountExceeded={[Function]}
    />
  </div>
</div>
`;
